# spaxiom-dsl

./: .gitignore  404.html  CHANGELOG.md  README.md  demo.py  fix_sequence_demo.py  fuse_with_demo.py  fusion_demo.py  index.html  mkdocs.yml  pyproject.toml  sequence_demo.py  simple_timestamp_demo.py  temporal_demo.py  timestamp_demo.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  performance.yml
api/overview/: index.html
architecture/: index.html
bench/: benchmark_vec.py
cli_usage/: index.html
css/: intent.css
docs/: architecture.md  architecture_diagram.drawio  cli_usage.md  index.md  intent.md  quickstart.md  release_checklist.md  spec.md  spec_draft.md  temporal_and_entities.md  whats_new.md
docs/api/: overview.md
docs/examples/: overview.md  smart_building.md
examples/: ai_stub_demo.py  co2_monitor.py  co2_plugin.py  config_cli_demo.py  config_demo.py  custom_plugin_demo.py  file_feed_demo.py  file_sensor_demo.py  geo_demo.py  gpio_output_demo.py  gpio_sensor_demo.py  occupancy_demo.py  onnx_person_demo.py  pi_door_demo.py  plugin_demo.py  privacy_demo.py  privacy_runtime_demo.py  sensors_config.yaml  sequence_demo.py  sim_vector_demo.py  smart_building.py  summarize_demo.py  units_demo.py
examples/data/: pressure_a.csv  thermal_a.csv
examples/overview/: index.html
examples/smart_building/: index.html
intent/: index.html
quickstart/: index.html
release_checklist/: index.html
search/: search_index.json
spaxiom/: __init__.py  cli.py  condition.py  core.py  events.py  fusion.py  logic.py  model.py  registry.py  runtime.py  sensor.py  temporal.py  zone.py
spaxiom/adaptors/: __init__.py  file_sensor.py  mqtt_sensor.py
spaxiom/intent/: __init__.py  adl_tracker.py  fm_steward.py  occupancy_field.py  queue_flow.py
spec/: index.html
spec_draft/: index.html
temporal_and_entities/: index.html
tests/: __init__.py  test_cli.py  test_config.py  test_entities.py  test_entity_logic.py  test_file_sensor.py  test_fusion.py  test_geo.py  test_geo_union.py  test_gpio_output.py  test_gpio_sensor.py  test_logic.py  test_model.py  test_mqtt_sensor.py  test_onnx_model.py  test_plugins.py  test_registry.py  test_scheduler.py  test_sensor_fusion_mixin.py  test_sequence.py  test_shutdown.py  test_sim_vector.py  test_summarize.py  test_temporal.py  test_units.py  test_zone.py
whats_new/: index.html
