[tool.poetry]
name = "spaxiom"
version = "0.0.1"
description = "An embedded domain-specific language for spatial sensor fusion and AI"
authors = ["Joe Scanlin"]
readme = "README.md"
license = "MIT"
packages = [{include = "spaxiom"}]

[tool.poetry.dependencies]
python = "^3.8"
shapely = ">=2.0"
numpy = ">=1.23"
pint = ">=0.23"
paho-mqtt = ">=2.0"
click = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.262"

[tool.poetry.scripts]
spax-run = "spaxiom.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 