[tool.poetry]
name = "spaxiom"
version = "0.0.2"
description = "An embedded domain-specific language for spatial sensor fusion and AI"
authors = ["Joe Scanlin"]
readme = "README.md"
license = "MIT"
packages = [{include = "spaxiom"}]
long_description = """
# Spaxiom-DSL

An embedded domain-specific language for spatial sensor fusion, temporal reasoning, and real-time event detection.

## What is Spaxiom?

Spaxiom is a powerful Domain-Specific Language (DSL) designed for building intelligent systems that work with:

- **Spatial Data**: Zones, sensors, and physical spaces
- **Temporal Logic**: Time-based conditions and historical analysis
- **Event Processing**: Triggering actions based on complex conditions
- **Entity Management**: Tracking and querying objects in your system
- **Physical Units**: Working with measurements in a type-safe manner

With Spaxiom, you can easily define complex conditions that span across space and time, and connect them to real-world events.

## Key Features

- ðŸ  **Spatial Zones**: Define and work with 2D spatial regions
- âš¡ **Sensors**: Interface with various sensor types and data streams
- â±ï¸ **Temporal Logic**: Create conditions that must be true for specific durations
- ðŸ”„ **Event Callbacks**: Register event handlers triggered by complex conditions
- ðŸ‘¥ **Entity Tracking**: Maintain collections of entities with flexible attributes
- ðŸ“ **Physical Units**: Work with measurements and conversions seamlessly
- ðŸ§© **Logical Operators**: Combine conditions using intuitive &, |, and ~ operators
"""
long_description_content_type = "text/markdown"

[tool.poetry.dependencies]
python = "^3.8"
shapely = ">=2.0"
numpy = ">=1.23"
pint = ">=0.23"
paho-mqtt = ">=2.0"
click = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.262"

[tool.poetry.scripts]
spax-run = "spaxiom.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 